Fixed border-left, text image wrap

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,10 +5,18 @@
 }
 
 * {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     margin: 0px;
-    padding: 0px;
+    padding: 0px; 
+    /* border: 2px solid red; */
 }
+
+section div h1 {
+    width: 100px;
+    clear: both;
+}
+
+
 
 body {
     color: blue;
@@ -40,6 +48,7 @@ body {
     display: inline-block;
     padding: 12px;
 }
+
 a {
     text-decoration: none;
     color:rgb(25, 248, 36);
@@ -71,15 +80,21 @@ header nav ul li a:hover {
     font-size: 18px;
     border-left: 3px solid #5f61c5;
     padding-left: 50px;
-    width: 40%;
+    width: 70%;
+    /* float: right; */
 }
 
 .aboutme img {
-    width: 65%;
+    width: 250px;
+    margin: 10px;
     border: 3px solid #5f61c5;
+    float: left;
     border-radius: 50%;
 }
 
+.aboutmeheading {
+    clear: both;
+}
 .project-examples {
     background-size: cover;
     display: flex;
@@ -112,7 +127,7 @@ header nav ul li a:hover {
 .small-project {
     border: 2px solid #2CD7E8;
     object-fit: cover;
-    width: 50%;
+    width: 45%;
     min-height: 200px;
     margin-bottom: 20px;
 }
